--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
     script( src='/javascripts/jquery.min.js' )
     script( src='/bootstrap/js/bootstrap.min.js' )
+    block scripts
 
 
 
