--- a/views/register.jade
+++ b/views/register.jade
@@ -1,10 +1,16 @@
 extends layout
+
+block scripts
+    script( src = '/javascripts/toAdd.js')
+
 block content
     .site-wrapper(style='background-size: cover')
         .site-wrapper-inner
             .cover-container.row.row-centered
                 .inner.cover.col-centered.col-max
-                    form.form-signin(action='/register', method='post')
+                    form#actualSubmit(action='/register', method='post')
+                        input(type='hidden', name='encrypted')
+                    form#loginForm.form-signin(action='/register', method='post')
                         input(type='hidden', name='${_csrf.parameterName}', value='${_csrf.token}')
                         h2.form-signin-heading Register for an account here
                         label.sr-only(for='inputEmail') Username
@@ -17,4 +23,5 @@ block content
                             strong Success!
                             |  You have created an account.
                     c:if(test='${param.error ne null}')
+                    p#pubKey.hidden= pubKey
 //TODO: When userauth is up and running, display appropriate messages
