--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,9 +38,12 @@ a {
   float:left;
   padding:1%;
 }
+.col-xs-4 {
+  width: 32.36%;
+}
 .challengeDisplay{
   display:inline-table;
-  width:30%;
+  /* width:30%; */
   margin:1%;
   float:left;
   padding:1%;
