--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,5 +22,7 @@ html
       //TODO: when userauth is done, display appropriate links when logged in
       +nav_item("login", "") Login
       +nav_item("register", "") Sign Up
+      h4 Welcome:
+        span#userName= username
 
     block content
