--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -21,17 +21,17 @@ block content
                 .item
                     span
                         h2.player2 Player 2
-    - for (var i = 0; i < 3; i++){
+    - for (var i = 1; i < 4; i++){
         .row.row-centered
             .col-xs-3.col-centered.player1.challengeBox
                 .item
-                    #player1
-                        span.writing(contenteditable='true')
+                    div(id='player1-box'+i)
+                        span.writing.player1(id='player1-w'+i contenteditable='true')
             .col-xs-3.col-centered.challenge.challengeBox
                 .item
-                    #challenge1
+                    div(id='challenge-'+i)
             .col-xs-3.col-centered.player2.challengeBox
                 .item
-                    #player2
-                        span.writing2(contenteditable='true')
+                    div(id='player2-box'+i)
+                        span.writing.player2(id='player2-w'+i contenteditable='true')
     - }
