--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  -if(username == "Guest"){
+    p Welcome to #{title}
+  -}
+  -else{
+    p Welcome to #{title}, #{username}!
+  -}
