--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,10 @@ doctype html
 html
   head
     title= title
-    script
-      localStorage.username = '#{user}';
+    script.
+      localStorage.username = '#{username}';
+      localStorage.isAdmin = '#{isAdmin}';
+
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //- Bootswatch Theme
@@ -17,13 +19,23 @@ html
 
 
   body
+
+    block scripts
+      script( src ='https://cdn.socket.io/socket.io-1.4.5.js')
+      script( src ='/javascripts/websockets.js')
+
     +nav("Project name", "dropdown_menu")
       +nav_item("/", "active") Home
       +nav_item("scoreboard", "active") Scoreboard
       +nav_item("challenge", "active") New Game
-      +nav_item("login", "") Login
-      +nav_item("register", "") Sign Up
-      h4 Welcome:
-        span#userName= username
+      -if(username == "Guest"){
+        +nav_item("login", "") Login
+        +nav_item("register", "") Sign Up
+      -  }
+      - else{
+        +nav_item_dropdown("#")( label = "" + username )
+          //add more user items here
+          +nav_item("logout", "") Logout
+      - }
 
     block content
