--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -6,6 +6,9 @@ block scripts
 
 block content
     h1.centered= title
+    h1(id = "color") test
+    h1(id = "time-out") Time In
+    button(id = "catch") catch
     br
     .row-centered.row
         .col-xs-4.col-centered
@@ -28,7 +31,7 @@ block content
             .player1.challengeBox
                 .item
                     div(id='player1-box'+i)
-                        span.writing.player1(id='player1-w'+i contenteditable='true')
+                        span.writing.player1(id='player1-w'+i class = 'textBox_player1' contenteditable='true')
         .col-xs-4.col-centered
             .challenge.challengeBox
                 .item
@@ -37,5 +40,5 @@ block content
             .player2.challengeBox
                 .item
                     div(id='player2-box'+i)
-                        span.writing.player2(id='player2-w'+i contenteditable='true')
+                        span.writing.player2(id='player2-w'+i class = 'textBox_player2' contenteditable='true')
     - }
