websocket communication fixed. Deleting not implemented. Added game timer and gameOver sending. Scoreing not implemented.

--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -6,6 +6,8 @@ block scripts
 
 block content
     h1.centered= title
+    h1
+        span(id='timer')
     h1(id = "color") test
     h1(id = "time-out") Time In
     button(id = "catch") catch
