--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -10,7 +10,8 @@ block content
         span(id='timer')
     h1(id = "color") test
     h1(id = "time-out") Time In
-    button(id = "catch") catch
+    div(class="catch-div")
+        button(id = "catch" class="catch-btn btn btn-info") Catch your opponent!
     br
     .row-centered.row
         .col-xs-4.col-centered
