--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
 
   body
 
-    +nav("Project name", "dropdown_menu")
+    +nav("Typing War", "dropdown_menu")
       +nav_item("/", "active") Home
       +nav_item("scoreboard", "active") Scoreboard
       +nav_item("challenge", "active") New Game
