--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,3 +64,19 @@ span.writing:focus{
 .hidden{
   display:none;
 }
+.blue {
+  color: blue;
+}
+.red {
+  color: red;
+}
+.player1-box{
+  -webkit-box-shadow: 3px 4px 51px 5px red;
+  -moz-box-shadow: 3px 4px 51px 5px red;
+  box-shadow: 3px 4px 51px 5px red;
+}
+.player2-box{
+  -webkit-box-shadow: 3px 4px 51px 5px blue;
+  -moz-box-shadow: 3px 4px 51px 5px blue;
+  box-shadow: 3px 4px 51px 5px blue;
+}
