--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -10,7 +10,6 @@ block content
         span(id='timer')
     h1(id = "color") test
     h1(id = "time-out") Time In
-    button(id = "catch") catch
     br
     .row-centered.row
         .col-xs-4.col-centered
@@ -47,7 +46,7 @@ block content
                         h2.player2 Player 2
     - for (var i = 1; i < 4; i++){
         .col-xs-4.col-centered
-            .player1.challengeBox
+            .player1.challengeBox.player1-challengeBox
                 .item
                     div(id='player1-box'+i)
                         span.writing.player1(id='player1-w'+i class = 'textBox_player1' contenteditable='true')
@@ -56,7 +55,7 @@ block content
                 .item
                     div(id='challenge-'+i)
         .col-xs-4.col-centered
-            .player2.challengeBox
+            .player2.challengeBox.player2-challengeBox
                 .item
                     div(id='player2-box'+i)
                         span.writing.player2(id='player2-w'+i class = 'textBox_player2' contenteditable='true')
