--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -51,7 +51,7 @@ block content
                     div(id='player1-box'+i)
                         span.writing.player1(id='player1-w'+i class = 'textBox_player1' contenteditable='true')
         .col-xs-4.col-centered
-            .challenge.challengeBox
+            .challenge.challengeBox(id="challengeBox-"+i)
                 .item
                     div(id='challenge-'+i)
         .col-xs-4.col-centered
