--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,20 @@ body {
   background: url("../images/asanoha-400px.png");
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+[class*= 'challengeBox'] *,#player1-box1{
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+
+  /*
+    Introduced in IE 10.
+    See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+  */
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .fullscreen{
   width: 100%;
   left: 0;
@@ -20,7 +34,7 @@ body {
 
 #gameOverScreen > div{
   margin-top:15%;
-  margin-bottom: 40%;
+  margin-bottom: 60%;
 }
 
 h1 {
