--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -11,11 +11,11 @@ block content
             h3 Matching you with an opponent...
     div.hidden#gameOverScreen
         div
-            h3 Game Over!
+            h2 Game Over!
             br
-            p Player 1:
-            p Player 2:
-            h4 Winner:
+            h4 Player 1:
+            h4 Player 2:
+            h3 Winner:
     h1.centered= title
     h1
         span(id='timer')
