this is how git works

--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -16,11 +16,10 @@ block content
             h4 Player 1:
             h4 Player 2:
             h3 Winner:
-    h1.centered= title
     h1
         span(id='timer')
-    h1(id = "color") test
-    h1(id = "time-out") Time In
+
+
     br
     .row-centered.row
         .col-xs-4.col-centered
@@ -32,7 +31,7 @@ block content
             .challengedisplay
                 .item
                     span
-                        h2.challenge Scores
+                        h1(id = "color") you are color
         .col-xs-4.col-centered
             .challengedisplay
                 .item
@@ -49,7 +48,7 @@ block content
             .challengedisplay
                 .item
                     span
-                        h2.challenge Challenges
+                        h1(id = "time-out") Time In
         .col-xs-4.col-centered
             .challengedisplay
                 .item
