--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -63,10 +63,10 @@ block content
         .col-xs-4.col-centered
             .challenge.challengeBox(id="challengeBox-"+i)
                 .item
-                    div(id='challenge-'+i)
+                    div(id='challenge-'+i )
         .col-xs-4.col-centered
             .player2.challengeBox.player2-challengeBox
                 .item
                     div(id='player2-box'+i)
-                        span.writing.player2(id='player2-w'+i class = 'textBox_player2' contenteditable='true')
+                        span.writing.player2(id='player2-w'+i class = 'textBox_player2' contenteditable='true' style="height: 100px;")
     - }
