--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,10 +8,21 @@ body {
   clear:both;
 }
 
+div, span{
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  max-width:inherit;
+
+}
+
 [class*= 'challengeBox'] *,#player1-box1{
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
   -webkit-user-select: none;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 
   /*
     Introduced in IE 10.
