--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -9,6 +9,15 @@ block content
         div
             h2 Please Wait...
             h3 Matching you with an opponent...
+    div.hidden#instructions
+        div
+            h2 Welcome to Typing War!
+            h4 You are the ... player
+            br
+            h4 Type the words displayed in the
+                span.active CENTER BOX
+            h4 You can DELETE your opponents words!
+            h4 If you see them deleting your words, DOUBLE CLICK your box to CATCH them and stun them!
     div.hidden#gameOverScreen
         div
             h2 Game Over!
