--- a/views/challenge.jade
+++ b/views/challenge.jade
@@ -3,6 +3,7 @@ extends layout
 block scripts
     script( src ='https://cdn.socket.io/socket.io-1.4.5.js')
     script( src ='/javascripts/websockets.js')
+    script( src ='/javascripts/websocket-functions.js')
 
 block content
     div.hidden#loadScreen
