Scoreboard working, forfeit working, database modified, need to save data to DB on game end, all data is there, just need to do it

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,3 +146,6 @@ span.writing:focus{
   -moz-box-shadow: 3px 4px 51px 5px blue;
   box-shadow: 3px 4px 51px 5px blue;
 }
+.centered-panel{
+  text-align: center;
+}
