--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -31,9 +31,9 @@ mixin nav_header
 //- End navbar mixins
 
 //- Panel mixin
-mixin panel(heading, style)
+mixin panel(heading, style, classes)
     - var style = (typeof style === 'undefined') ? "default" : style
-    div( class=["panel", "panel-" + style] )
+    div( class=["panel", "panel-" + style, classes] )
         .panel-heading= heading
         .panel-body
             block
